Correction iphone - finitions

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,8 +1,7 @@
 /*General*/
 * {
     box-sizing: border-box;
-    /*♥♥♥♥♥♥*/
-    color: blue;
+    color: white;
     text-decoration: none;
 }
 
